well xhtml2pdf doesn't work with my css, so using a canned file for now

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -6,6 +6,10 @@
     margin : 0;
 }
 
+p {
+  margin: 12px 0;
+}
+
 .full-height-card {
       background: @text-background;
       color: @text-main;
