--- a/template/cv.html
+++ b/template/cv.html
@@ -6,10 +6,13 @@
         <div class="collapsible">
             <p>
                 My CV should pop up automatically, if it doesn't, please
-                <a id="github-cv" target="_blank"
-                   href="http://alistair-broomhead.github.io/cv/">
-                    click here</a>
+                <a id="github-cv" target="_blank" href="{{ cv_url }}">click here</a>
                 to find my CV on Github.
+            </p>
+            <p>
+                For a printer-friendly pdf please
+                <a id="github-cv" target="_blank" href="{{ pdf_url }}">click here</a>
+                - this has been printed to a pdf on my own machine, print output from the page itself may vary by browser, operating system, and print drivers.
             </p>
         </div>
     </div>
