exploder deserves some custom css

--- a/template/exploder.html
+++ b/template/exploder.html
@@ -8,6 +8,15 @@
     <!-- App objects -->
     <script src="/static/js/app/exploder/canvas_animation.js"></script>
     <script src="/static/js/app/exploder/exploder.js"></script>
+    <style>
+        body #page-mid #content {
+            bottom: 30px;
+            right: 2%;
+        }
+        body #page-mid #sidebar {
+            display: none;
+        }
+    </style>
 {% endblock %}
 {% block content %}
     <canvas id="gameCanvas"></canvas>
