--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,5 @@
-@media screen {
-  .with-shadow {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
+.with-shadow {
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 * {
   padding: 0;
@@ -13,14 +11,10 @@ p {
 .full-height-card {
   background: white;
   color: #212121;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   top: 75px;
   /* Height of header and nav */
   padding: 10px;
-}
-@media screen {
-  .full-height-card {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
 }
 body {
   background: #ececec;
@@ -44,10 +38,6 @@ body #page-top {
     width: 104%;
     display: block;
     position: fixed;
-  }
-}
-@media screen and screen {
-  body #page-top {
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   }
 }
@@ -65,18 +55,16 @@ body #page-top > div #header {
   display: inline-block;
   padding: 9px 0;
   font-size: 1.5em;
-  min-width: 200px;
+  min-width: 199px;
+  border-right: 1px solid rgba(255, 255, 255, 0.6);
+  height: 26px;
 }
 body #page-top > div .heading-section {
   display: inline-block;
   height: 100%;
   padding: 12px;
   background: rgba(255, 255, 255, 0.15);
-}
-@media screen {
-  body #page-top > div .heading-section {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 body #page-top > div .heading-section * {
   margin: 0 6px;
@@ -89,11 +77,7 @@ body #page-top > div #nav {
   height: 100%;
   padding: 12px;
   background: rgba(255, 255, 255, 0.15);
-}
-@media screen {
-  body #page-top > div #nav {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 body #page-top > div #nav * {
   margin: 0 6px;
@@ -103,37 +87,45 @@ body #page-top > div #nav * {
 }
 body #page-top > div #nav * {
   background: white;
-}
-@media screen {
-  body #page-top > div #nav * {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 body #page-top > div #github {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 2%;
   margin: 10px;
   padding: 0;
 }
-body #page-top > div #github span {
+body #page-top > div #github div {
+  position: absolute;
+  top: 1px;
+  right: -30px;
+  width: 200px;
+}
+body #page-top > div #github div img {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+body #page-top > div #github div span {
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+  position: relative;
+  top: -12px;
+  right: 0;
   background: white;
   padding: 10px 4px;
   border-radius: 2px;
   height: 10px;
-  position: absolute;
-  top: 1px;
-  right: 34px;
   width: 150px;
 }
-@media screen {
-  body #page-top > div #github span {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+@media screen and (max-width: 720px) {
+  body #page-top > div #github div span {
+    display: none;
   }
 }
 @media screen and (max-width: 720px) {
-  body #page-top > div #github span {
-    display: none;
+  body #page-top > div #github div {
+    width: 60px;
   }
 }
 body #page-mid #content {
@@ -204,13 +196,9 @@ body #page-mid #content .accordion .heading {
 }
 body #page-mid #content .accordion div {
   background: white;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   margin: 10px;
   padding: 10px;
-}
-@media screen {
-  body #page-mid #content .accordion div {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
 }
 body #page-mid #content .accordion .collapsible {
   visibility: visible;
@@ -234,6 +222,7 @@ body #page-mid #content .accordion .collapsible > * {
     background: white;
     margin: 0;
     padding: 5px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   }
   body #page-mid #content .contracted .heading {
     margin: 5px;
@@ -247,27 +236,20 @@ body #page-mid #content .accordion .collapsible > * {
   body #page-mid #content .contracted .collapsible > * {
     height: 0;
     font-size: 0;
-  }
-}
-@media screen and screen {
-  body #page-mid #content .contracted {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+    margin: 0;
+    padding: 0;
   }
 }
 body #page-mid #sidebar {
   background: white;
   color: #212121;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   top: 75px;
   /* Height of header and nav */
   padding: 10px;
   position: fixed;
   right: 2px;
   left: 72%;
-}
-@media screen {
-  body #page-mid #sidebar {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  }
 }
 body #footer {
   box-sizing: border-box;
@@ -292,10 +274,6 @@ body #footer {
     width: 104%;
     display: block;
     position: fixed;
-  }
-}
-@media screen and screen {
-  body #footer {
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   }
 }
