--- a/static/css/style.less
+++ b/static/css/style.less
@@ -40,7 +40,9 @@ body {
         display: inline-block;
         padding: 9px 0;
         font-size: 1.5em;
-        min-width: 200px;
+        min-width: 199px;
+        border-right:  1px solid rgba(255,255,255, .6);
+        height: 26px;
       }
 
       .heading-section {
@@ -70,21 +72,35 @@ body {
       #github {
         position: absolute;
         top: 0;
-        right: 0;
+        right: 2%;
         margin: 10px;
         padding: 0;
-        span {
-          .with-shadow;
-          background: @text-background;
-          padding: 10px 4px;
-          border-radius: 2px;
-          height: 10px;
+        div {
           position: absolute;
           top: 1px;
-          right: 34px;
-          width: 150px;
+          right: -30px;
+          width: 200px;
+          img {
+            position: relative;
+            top: 0;
+            left: 0;
+          }
+          span{
+            .with-shadow;
+            position: relative;
+            top: -12px;
+            right: 0;
+            background: @text-background;
+            padding: 10px 4px;
+            border-radius: 2px;
+            height: 10px;
+            width: 150px;
+            @media screen and (max-width: 720px) {
+              display: none;
+            }
+          }
           @media screen and (max-width: 720px) {
-            display: none;
+            width: 60px;
           }
         }
       }
@@ -141,9 +157,9 @@ body {
       @media screen {
         .contracted {
           background: @text-background;
-          .with-shadow;
           margin: 0;
           padding: 5px;
+          .with-shadow;
 
           .heading {
             margin: 5px;
@@ -156,6 +172,8 @@ body {
             & > * {
               height: 0;
               font-size: 0;
+              margin: 0;
+              padding: 0;
             }
 
           }
