--- a/template/base.html
+++ b/template/base.html
@@ -27,8 +27,10 @@
             <div id="github">
                 <a target="_blank"
                    href="https://github.com/alistair-broomhead/theheadofabroom.pythonanywhere.com">
-                    <span>Source code on GitHub</span>
-                    <img src="https://opam.ocaml.org/ext/img/github.png">
+                    <div>
+                        <span>Source code on GitHub</span>
+                        <img src="https://opam.ocaml.org/ext/img/github.png">
+                    </div>
 
                 </a>
             </div>
