--- a/template/base.html
+++ b/template/base.html
@@ -2,6 +2,7 @@
 <html>
 {% set site_name = site.get('name') %}
 {% set page_name = page.get('name') %}
+{% set site_apps = site.get('apps') %}
 <head>
     <title> {{ site_name }} | {{ page_name }} </title>
     <link rel="stylesheet" type="text/css" href="/static/css/font-size.css">
@@ -16,13 +17,28 @@
                 <span id="page-title"> {{ page_name }} </span>
             </div>
             <div id="nav">
-                {% for app in site.get('apps') %}
-                    {% set app_name = app.get('name') %}
-                    {% set app_url = app.get('url') %}
+                {% macro nav_item(name, extra='') -%}
+                    {% set app = site_apps[name] %}
+                    {% set app_url = app['url'] %}
                     <a href="{{ app_url }}"
-                       {%  if app_name == page_name %} class="nav.current"
-                       {% else %} class="nav.other" {%  endif %} >{{ app_name }}</a>
-                {% endfor %}
+                       id="nav-{{ name }}"
+                       class={% if name == page_name %} "nav.current" {% else %} "nav.other" {% endif %}>
+                        {{ name }}
+                    </a>
+                {%- endmacro %}
+
+                {{ nav_item("Home") }}
+                {{ nav_item("Blog") }}
+                {{ nav_item("Experiments") }}
+                {{ nav_item("Contact") }}
+                {{ nav_item("CV") }}
+
+                <script>
+                    document.getElementById("nav-CV").onclick = function(){
+                        window.open('{{ site_apps['CV']['extra']['cv_url'] }}', '_blank')
+                    }
+                </script>
+
             </div>
             <div id="github">
                 <a target="_blank"
