All links now lead somewhere

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,10 @@ body #page-top > div #nav * {
   background: white;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
+body #page-top > div #nav .nav-current {
+  font-weight: bold;
+  background: rgba(255, 255, 255, 0.9);
+}
 body #page-top > div #github {
   position: absolute;
   top: 0;
