--- a/template/contact.html
+++ b/template/contact.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div id="welcome" class="accordion">
-        <h1 class="heading"> How to contact me: </h1>
+        <h1 class="heading"> How to contact me </h1>
         <div class="collapsible">
 
             <p>
@@ -36,13 +36,6 @@
                 Python Dojo please use {{ mail('team@ldnpydojo.org.uk') }} where
                 either myself or another member o the team will gt back to you.
             </p>
-
-
-
         </div>
     </div>
-{% endblock %}
-
-{% block sidebar %}
-    Nothing to see here...
 {% endblock %}
