--- a/static/css/style.less
+++ b/static/css/style.less
@@ -62,10 +62,13 @@ body {
       }
       #nav {
         .heading-section;
-
         & * {
           background: @text-background;
           .with-shadow;
+        }
+        .nav-current {
+          font-weight: bold;
+          background: fadeout(@text-background, 10%);
         }
       }
 
