--- a/template/contact.html
+++ b/template/contact.html
@@ -34,7 +34,7 @@
                 </span>
                 for anything more personal. For anything related to the London
                 Python Dojo please use {{ mail('team@ldnpydojo.org.uk') }} where
-                either myself or another member o the team will gt back to you.
+                either myself or another member of the team will get back to you.
             </p>
         </div>
     </div>
