"Make it more personal"

--- a/static/css/theme.less
+++ b/static/css/theme.less
@@ -1,6 +1,6 @@
-@primary-colour: #4285f4;
+@primary-colour: #519500;
 @primary-colour-light: #87b2f7;
-@secondary-colour: #d23f31;
+@secondary-colour: #365d00;
 @lightened: hsla(0, 0%, 100%, 0.15);
 @text-background: white;
 @text-main: #212121;
