--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ body #page-top {
   line-height: 1;
   z-index: 22;
   color: white;
-  background-color: #4285f4;
+  background-color: #519500;
   height: 56px;
 }
 @media screen {
@@ -225,7 +225,7 @@ body #page-mid #content .section > :first-child {
   margin: 0;
   font-weight: bold;
   font-size: 1.5em;
-  color: #d23f31;
+  color: #365d00;
   padding: 6px 6px 0;
   border-radius: 2px;
 }
@@ -245,7 +245,7 @@ body #page-mid #content .accordion {
   transition: all 0.25s ease 0;
 }
 body #page-mid #content .accordion .heading {
-  color: #d23f31;
+  color: #365d00;
   margin: 10px;
   margin-top: 40px;
   -webkit-transition: all 0.25s ease 0;
@@ -319,7 +319,7 @@ body #footer {
   line-height: 1;
   z-index: 22;
   color: white;
-  background-color: #4285f4;
+  background-color: #519500;
   text-align: right;
   margin: auto;
   padding: 2px;
