--- a/static/css/style.less
+++ b/static/css/style.less
@@ -48,11 +48,18 @@ body {
     & > div {
       padding: 8px 4%;
 
+      .offset {
+        position: relative;
+        top: -15px;
+        left: 6px;
+      }
+
       #header {
+        .offset;
         display: inline-block;
         padding: 9px 0;
         font-size: 1.5em;
-        min-width: 199px;
+        min-width: 180px;
         border-right:  1px solid rgba(255,255,255, .6);
         height: 26px;
       }
@@ -73,6 +80,7 @@ body {
 
       }
       #nav {
+        .offset;
         .heading-section;
         .nav-section {
           display: inline;
@@ -140,27 +148,27 @@ body {
           position: absolute;
           top: 1px;
           right: -10px;
-          width: 200px;
+          min-width: 200px;
           img {
-            position: relative;
-            top: 0;
-            left: 0;
+            position: fixed;
+            top: 12px;
+            right: 0;
           }
           span{
             .with-shadow;
             position: relative;
-            top: -12px;
-            right: 0;
+            top: 10px;
+            right: -30px;
             background: @text-background;
             padding: 10px 4px;
             border-radius: 2px;
             height: 10px;
-            width: 150px;
-            @media screen and (max-width: 720px) {
+            min-width: 150px;
+            @media screen and (max-width: 800px) {
               display: none;
             }
           }
-          @media screen and (max-width: 720px) {
+          @media screen and (max-width: 800px) {
             width: 60px;
           }
         }
@@ -251,6 +259,15 @@ body {
     padding-left: 52%;
     height: 24px;
   }
+}
+
+.headshot {
+  display: inline-block;
+  background-image: url(http://www.gravatar.com/avatar/0c85ef5eb7678857e2a6b793dfe055a3.png);
+  background-size: 40px 40px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 /* Dimensions */
