--- a/template/base.html
+++ b/template/base.html
@@ -5,7 +5,7 @@
 {% set site_apps = site.get('apps') %}
 <head>
     <title> {{ site_name }} | {{ page_name }} </title>
-    <link rel="stylesheet" type="text/css" href="/static/css/font-size.css">
+    /* <link rel="stylesheet" type="text/css" href="/static/css/font-size.css"> */
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script src="/static/js/app/accordion.js"></script>
     {% block head %}{% endblock %}
@@ -13,8 +13,11 @@
 <body id="wrapper">
     <div id="page-top">
         <div>
+                <div class="headshot"></div>
             <div id="header">
-                <span id="page-title"> {{ page_name }} </span>
+                <span id="page-title">
+                    {{ page_name }}
+                </span>
             </div>
             <div id="nav">
                 {% macro nav_item(name, extra='') -%}
